adiciona configuração vercel para o frontend

--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,12 @@
   "devCommand": "npm run dev",
   "installCommand": "npm install",
   "framework": "nextjs",
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/"
+    }
+  ],
   "routes": [
     {
       "src": "/api/(.*)",
